--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+storybook-static
 
 
 # local env files
@@ -21,9 +22,3 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-# Vue Browser Extension Output
-*.pem
-*.pub
-*.zip
-/artifacts
