--- a/src/manifest.json
+++ b/src/manifest.json
@@ -38,7 +38,6 @@
   },
   "options_ui": {
     "page": "options.html",
-    "browser_style": true,
-    "open_in_tab": true
+    "browser_style": true
   }
 }
